--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -83,7 +83,39 @@
         "\n",
         "- discriminative Learning Rates\n",
         "  - early layers들에게는 작은 learning rate를 적용하여 optimal value를 찾는다.\n",
-        "  - 만약 너무 높은 LR을 이용할 경우, 최적점에서 너무 멀어져버린다."
+        "  - 만약 너무 높은 LR을 이용할 경우, 최적점에서 너무 멀어져버린다.\n",
+        "  - 따라서 transfer learning에서는 이러한 설정이 매우 중요하다.\n",
+        "    - You can put a `single number` (e.g. 1e-3): Every layer gets the same learning rate. So you're not using discriminative learning rates.\n",
+        "    - You can write a `slice`. So you can write slice with a single number (e.g. slice(1e-3)): The final layers get a learning rate of whatever you wrote down (1e-3), and then all the other layers get the same learning rate which is that divided by 3. So all of the other layers will be 1e-3/3. The last layers will be 1e-3.\n",
+        "    - You can write slice with two numbers (e.g. slice(1e-5, 1e-3)). The final layers (these randomly added layers) will still be again 1e-3. The first layers will get 1e-5, and the other layers will get learning rates that are equally spread between those two - so multiplicatively equal. If there were three layers, there would be 1e-5, 1e-4, 1e-3, so equal multiples each time.\n",
+        "\n",
+        "    - every layer가 아닌 `layer group`마다 다른 LR을 적용한다.\n",
+        "      - 새로 추가된 random layers들을 한 그룹\n",
+        "      - 나머지들을 2그룹으로 나눈다.\n",
+        "        - By default (at least with a CNN), you'll get three layer groups. If you say slice(1e-5, 1e-3), you will get 1e-5 learning rate for the first layer group, 1e-4 for the second, 1e-3 for the third."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QXfAzNX0D21f",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Affine Function\n",
+        "  - matrix multiplication과 같은 linear functions들을 affine function이라 부른다. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uaepy5hnFAI4",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Embedding \n",
+        "  - input matrice들을 one-hot encoding을 통해 만든다.\n",
+        "  - "
       ]
     },
     {
