--- a/lesson5-collab.ipynb
+++ b/lesson5-collab.ipynb
@@ -1920,6 +1920,79 @@
       "metadata": {
         "id": "xt8aA3nBue0H",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 270
+        },
+        "outputId": "683156dc-7fac-48cc-bfd9-ad4884a85670"
+      },
+      "source": [
+        "doc(collab_learner)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h4 id=\"collab_learner\" class=\"doc_header\"><code>collab_learner</code><a href=\"https://github.com/fastai/fastai/blob/master/fastai/collab.py#L96\" class=\"source_link\" style=\"float:right\">[source]</a><a class=\"source_link\" data-toggle=\"collapse\" data-target=\"#collab_learner-pytest\" style=\"float:right; padding-right:10px\">[test]</a></h4><blockquote><p><code>collab_learner</code>(<strong><code>data</code></strong>, <strong><code>n_factors</code></strong>:<code>int</code>=<strong><em><code>None</code></em></strong>, <strong><code>use_nn</code></strong>:<code>bool</code>=<strong><em><code>False</code></em></strong>, <strong><code>emb_szs</code></strong>:<code>Dict</code>[<code>str</code>, <code>int</code>]=<strong><em><code>None</code></em></strong>, <strong><code>layers</code></strong>:<code>Collection</code>[<code>int</code>]=<strong><em><code>None</code></em></strong>, <strong><code>ps</code></strong>:<code>Collection</code>[<code>float</code>]=<strong><em><code>None</code></em></strong>, <strong><code>emb_drop</code></strong>:<code>float</code>=<strong><em><code>0.0</code></em></strong>, <strong><code>y_range</code></strong>:<code>OptRange</code>=<strong><em><code>None</code></em></strong>, <strong><code>use_bn</code></strong>:<code>bool</code>=<strong><em><code>True</code></em></strong>, <strong><code>bn_final</code></strong>:<code>bool</code>=<strong><em><code>False</code></em></strong>, <strong>**<code>learn_kwargs</code></strong>) → <a href=\"https://docs.fast.ai/basic_train.html#Learner\"><code>Learner</code></a></p>\n",
+              "</blockquote>\n",
+              "<div class=\"collapse\" id=\"collab_learner-pytest\"><div class=\"card card-body pytest_card\"><a type=\"button\" data-toggle=\"collapse\" data-target=\"#collab_learner-pytest\" class=\"close\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></a><p>Tests found for <code>collab_learner</code>:</p><ul><li><code>pytest -sv tests/test_collab_train.py::test_val_loss</code> <a href=\"https://github.com/fastai/fastai/blob/master/tests/test_collab_train.py#L16\" class=\"source_link\" style=\"float:right\">[source]</a></li></ul><p>To run tests please refer to this <a href=\"/dev/test.html#quick-guide\">guide</a>.</p></div></div><p>Create a Learner for collaborative filtering on <code>data</code>.</p>\n",
+              "<p><a href=\"https://docs.fast.ai/collab.html#collab_learner\" target=\"_blank\" rel=\"noreferrer noopener\">Show in docs</a></p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00QscDydu_5P",
+        "colab_type": "text"
+      },
+      "source": [
+        "- `collab_learner`는 pyTorch의 'embeddingDotBias`를  사용하는데, \n",
+        "- pyTorch layer들과 models들은 `nn.Module` 이다.\n",
+        "  - 이들은 function처럼 생겼지만 function이 아니기에 __call__이 없다. \n",
+        "  - 따라서 `forward`와 같은 실행 method 부분을 따로 정의해주어야 한다. 여기서 prediction calculation이 일어진다.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UgyHaA0VylYI",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Regularization : Weight Decay\n",
+        "  - Weight Decay : type of regularization\n",
+        "  - Regularization \n",
+        "  - 이전에는 less parameters로 overfitting 을 피하려했다.\n",
+        "    - 그런데 parameters들을 매우 많이 사용하는데, 그 값들이 0에 가깝다면??\n",
+        "    - complexitivity 는 parameters의 갯수가 아닌 올바른 penalizing을 통해 매겨져야 한다. : loss function\n",
+        "    - loss function : RMSE\n",
+        "    - parameter값들이 너무 커서, loss 값이 너무 크게 나오면 loss 값 분별이 어려워진다.\n",
+        "    - 따라서 sum(parameters^2)에 wd를 곱해줘 정규화해준다.\n",
+        "    - 보통 0.01로\n",
+        "    - 너무 크면 학습이 잘 안되고, 너무 작으면 overfitting\n",
+        "    - wd의 기본값 0.01은 **kwargs에 의해 이후에도 계속 유지되어 redirection된다.\n",
+        "    \n",
+        "\n",
+        "  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d8MAc3y-vIcO",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
