--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -25,6 +25,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xUjB1JO9-xif",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 이번 exercise에서는 standard fully connected net을 사용한다.(CNN이 아닌)\n",
+        "- "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QU0QzSpO5m9t",
@@ -32,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "%matplotlib inline\n",
+        "\u000b%matplotlib inline\n",
         "from fastai.basics import *"
       ],
       "execution_count": 0,
@@ -166,8 +177,8 @@
       "metadata": {
         "id": "dSW5e_lb5m-C",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "7808b5f0-b72b-42de-c68d-0a416fa5e672"
+        "outputId": "7808b5f0-b72b-42de-c68d-0a416fa5e672",
+        "colab": {}
       },
       "source": [
         "path.ls()"
@@ -203,12 +214,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mgfG5kUq_5nP",
+        "colab_type": "text"
+      },
+      "source": [
+        "- testset은 지정해주지 않는다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1-JlVeRl5m-P",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "60fd81c9-8f15-43f6-e479-05cf3d6fa823"
+        "outputId": "60fd81c9-8f15-43f6-e479-05cf3d6fa823",
+        "colab": {}
       },
       "source": [
         "plt.imshow(x_train[0].reshape((28,28)), cmap=\"gray\")\n",
@@ -244,17 +265,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Om_F9QUB_7iY",
+        "colab_type": "text"
+      },
+      "source": [
+        "- x_train[0]를 가져와 plt를 이용해 보여준다. 이때 원래 데이터는 50000rowsx784cols 모양인데, plt로 보여줄 떄는 784=284*284로 reshape하여 flattened version으로 만들어주었다.\n",
+        "- \n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iY4R6MFg5m-U",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ebfc1931-71a5-4a0c-f85f-087b61faa474"
+        "outputId": "ebfc1931-71a5-4a0c-f85f-087b61faa474",
+        "colab": {}
       },
       "source": [
         "x_train,y_train,x_valid,y_valid = map(torch.tensor, (x_train,y_train,x_valid,y_valid))\n",
         "n,c = x_train.shape\n",
-        "x_train.shape, y_train.min(), y_train.max()"
+        "#n : the number of things I have\n",
+        "#c : the number of columns\n",
+        "x_train.shape, y_train.min(), y_train.max()\n",
+        "#y_train.min() ==0, y_train.max()== 9 (0부터 9까지)"
       ],
       "execution_count": 0,
       "outputs": [
@@ -270,6 +306,16 @@
           },
           "execution_count": 0
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cFrLHDRVBNrD",
+        "colab_type": "text"
+      },
+      "source": [
+        "- original data가 numpy array였기에, 이를 torch.tensor를 이용해 tensor 형태의 data type으로 바꾸어준다.\n"
       ]
     },
     {
@@ -307,12 +353,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m603jsfNDZCJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "- minibatch를 이용할 경우, fastai 보다는 PyTorch의 `TensorDataset`을 이용한다.\n",
+        "- TensorDataset은 2 tensor를 받아 dataset을 생성한다. dataset은 index로 접근할 수 있으며, x와 y value를 가지고있다.\n",
+        "\n",
+        "- DataBunch를 이용해 dataset을 이용해 data loaders를 만든다.\n",
+        "   - data loaders는 index보다는 next와 같은 iterator 방식으로 Data를 접근하게 해준다.\n",
+        "   - mini batch를 전해준다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "w3h2LH-e5m-m",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "41a6c834-d88c-41fc-9a0c-2e2a9a792874"
+        "outputId": "41a6c834-d88c-41fc-9a0c-2e2a9a792874",
+        "colab": {}
       },
       "source": [
         "x,y = next(iter(data.train_dl))\n",
@@ -335,6 +396,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Oaj6RujIE4Nn",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 784 pixels flattend out => x.shape\n",
+        "- mini batch(64) => y.shape\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "z61bpTJ55m-q",
@@ -351,6 +423,29 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yCjRYsWlFSzd",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### logistic regression model\n",
+        "\n",
+        "- python의 특성인 subclass :  The main thing is you have to override the constructor dunder init (__init__) and make sure that you call the super class' constructor (super().__init__()) because nn.Module super class' constructor is going to set it all up to be a proper nn.Module for you. \n",
+        "  - nn.Module(PyTorch)를 상속받는다.\n",
+        "\n",
+        "- nn.Linear\n",
+        "  - x@a + b를 해주는 부분\n",
+        "  - 여기서는 intercept(b)가 따로 없다.\n",
+        "  - forward method에서 불려진다.\n",
+        "\n",
+        "- `forward(self,xb)` : xb는 x mini batch를 의미한다. 이를 x@a 해주는 self.lin의 인자로 전해준다. \n",
+        "  - 즉 minibatch를 가지고 a@x +b 한 값을 return 한다.\n",
+        "\n",
+        "- 이러한 것들을 logistic regression model라고 한다. == a neural net with no hidden layers == one layer neural net, no nonlinearities.\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -370,8 +465,8 @@
       "metadata": {
         "id": "d8ya1z2g5m-2",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5c69dc6d-5cf1-4480-eeba-a2604ba5620f"
+        "outputId": "5c69dc6d-5cf1-4480-eeba-a2604ba5620f",
+        "colab": {}
       },
       "source": [
         "model"
@@ -399,8 +494,8 @@
       "metadata": {
         "id": "eJueNJQo5m-7",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "69aefaf7-24c0-49ec-ff73-2563679c5ff0"
+        "outputId": "69aefaf7-24c0-49ec-ff73-2563679c5ff0",
+        "colab": {}
       },
       "source": [
         "model.lin"
@@ -426,8 +521,8 @@
       "metadata": {
         "id": "vqK8qQxr5m-_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "01143b64-48d8-4d47-fdc5-2df6d6f13182"
+        "outputId": "01143b64-48d8-4d47-fdc5-2df6d6f13182",
+        "colab": {}
       },
       "source": [
         "model(x).shape"
@@ -453,8 +548,8 @@
       "metadata": {
         "id": "C68Ul4I45m_D",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "77ccafeb-b8d8-4c51-9bd2-c9413dadd734"
+        "outputId": "77ccafeb-b8d8-4c51-9bd2-c9413dadd734",
+        "colab": {}
       },
       "source": [
         "[p.shape for p in model.parameters()]"
@@ -473,6 +568,16 @@
           },
           "execution_count": 0
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ocwaN_7xIDKR",
+        "colab_type": "text"
+      },
+      "source": [
+        "- "
       ]
     },
     {
@@ -545,8 +650,8 @@
       "metadata": {
         "id": "CMYgx1kN5m_X",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e7a83976-ed7b-4844-cac2-7c8558c1b827"
+        "outputId": "e7a83976-ed7b-4844-cac2-7c8558c1b827",
+        "colab": {}
       },
       "source": [
         "plt.plot(losses);"
@@ -621,8 +726,8 @@
       "metadata": {
         "id": "LfqLxCJD5m_f",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "03d61170-d121-470d-b9be-d0021a18bf0d"
+        "outputId": "03d61170-d121-470d-b9be-d0021a18bf0d",
+        "colab": {}
       },
       "source": [
         "plt.plot(losses);"
@@ -695,8 +800,8 @@
       "metadata": {
         "id": "YdZKn6nb5m_r",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "28551150-ae4c-48bf-ecbd-2b346911c783"
+        "outputId": "28551150-ae4c-48bf-ecbd-2b346911c783",
+        "colab": {}
       },
       "source": [
         "plt.plot(losses);"
@@ -723,8 +828,8 @@
       "metadata": {
         "id": "tUt62SSG5m_t",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "045b305b-b523-47a3-cd5e-a846e364915a"
+        "outputId": "045b305b-b523-47a3-cd5e-a846e364915a",
+        "colab": {}
       },
       "source": [
         "learn = Learner(data, Mnist_NN(), loss_func=loss_func, metrics=accuracy)"
@@ -754,8 +859,8 @@
       "metadata": {
         "id": "KETrVLeC5m_w",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "18a06eb2-903d-4085-dec2-30b486a19621"
+        "outputId": "18a06eb2-903d-4085-dec2-30b486a19621",
+        "colab": {}
       },
       "source": [
         "%debug"
@@ -793,8 +898,8 @@
       "metadata": {
         "id": "hakasO1q5m_4",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "776605f3-6a0c-4a83-9004-7bc773a5e2bf"
+        "outputId": "776605f3-6a0c-4a83-9004-7bc773a5e2bf",
+        "colab": {}
       },
       "source": [
         "learn.lr_find()\n",
@@ -843,8 +948,8 @@
       "metadata": {
         "id": "f6GHjORP5m_6",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d50311ef-f3e1-483d-ad55-44f784a70f2d"
+        "outputId": "d50311ef-f3e1-483d-ad55-44f784a70f2d",
+        "colab": {}
       },
       "source": [
         "learn.fit_one_cycle(1, 1e-2)"
@@ -885,8 +990,8 @@
       "metadata": {
         "id": "32LKQsSf5m_9",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b8837ffa-2524-4360-d17c-6f0135536059"
+        "outputId": "b8837ffa-2524-4360-d17c-6f0135536059",
+        "colab": {}
       },
       "source": [
         "learn.recorder.plot_lr(show_moms=True)"
@@ -913,8 +1018,8 @@
       "metadata": {
         "id": "emRJ_N0z5m__",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4fd56ec1-c953-4bbb-ccbb-7402a443433e"
+        "outputId": "4fd56ec1-c953-4bbb-ccbb-7402a443433e",
+        "colab": {}
       },
       "source": [
         "learn.recorder.plot_losses()"
