--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -577,7 +577,11 @@
         "colab_type": "text"
       },
       "source": [
-        "- "
+        "- torch.Size([10,784]) : 784 dimensional input, 그리고 10 dimensional output을 의미한다.\n",
+        "  - 784개의 flattened된 pixel값,\n",
+        "  - 10개의 숫자로 된 예측값\n",
+        "\n",
+        "- torch.Size([10]) : 10개의 bias\n"
       ]
     },
     {
@@ -607,6 +611,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I8WJx1oNM_Mu",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 3과 4의 차이는 0과 4의 차이만큼 완전히 다르다. : 얼마나 가까운지를 MSE를 통해서 계산할 수 없다.\n",
+        "-"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wPoX-hTK5m_O",
@@ -633,6 +648,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gNnq5jtVOcXR",
+        "colab_type": "text"
+      },
+      "source": [
+        "- `w2 = 0.\n",
+        "  for p in model.parameters(): w2 += (p**2).sum()` : weight decay의 적용.\n",
+        "\n",
+        "- `~~.item()`은 scalar tensor를 normal python number로 바꾸어준다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Rqx5hvSs5m_T",
@@ -644,6 +672,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hu3DeWGuO0UC",
+        "colab_type": "text"
+      },
+      "source": [
+        "- data loader에서 minibatch 만큼 data를 받아서, x, y 라 칭한후 update 를 통해 loss 를 return한다.\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -674,6 +712,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LNc5oyChPe_p",
+        "colab_type": "text"
+      },
+      "source": [
+        "- loss값을 줄이며 weight space를 flattening해줄 수록, 같은 lr을 이용할 경우 상대적으로 더 많은 차이가 일어난다. 따라서 lr을 계속 줄여간다. (learning rate annealing)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AWSG4LIPP9AT",
+        "colab_type": "text"
+      },
+      "source": [
+        "- L2 regularization\n",
+        "  - wd*sum(w^2)가 중요한데 이는 gradient descent(w_t = w_t-1 - lr*(dL/dW_t-1)에서 dL에 들어가기 때문이다. 이 부분이 weights 들을 update 한다.\n",
+        "  - dl/dw에서 mse는 이전에 다룬 부분이다.\n",
+        "  - When it's in this form (wd* w^{2}) where we add the square to the loss function, that's called L2 regularization.\n",
+        "- When it's in this form (wd\\cdot w) where we subtract wd times weights from the gradients, that's called weight decay.\n",
+        "\n",
+        "- 이러한 부분들을 통해 매우 큰 neural networkt를 만들때에도 overfitting들을 피한다.\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Hzo5Kdwr5m_Z",
@@ -694,6 +759,18 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RtBRg-lWSpNR",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Two linear layers 적용\n",
+        "  - weight matrix의 size가 50인 layer.\n",
+        "  - 이 50개를 relu로 처리하고, input으로 받아 10개 값로 return"
+      ]
     },
     {
       "cell_type": "code",
@@ -781,6 +858,44 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u7CLK345Tdy3",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Optimize를 SGD가 아닌 Adam을 이용한 경우\n",
+        "  - `for p in parameters : p -= lr* p.grad` 대신 opt.step()을 그냥 짧게 이용\n",
+        "  - 다른 optimizer를 사용할 경우 다른 lr을 써야한다.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u9SijkQPUTbV",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Adam\n",
+        "  -  gradient를 계산하기 위해 2가지 방법이 있다.\n",
+        "  - 하나는 정규방정식으로 구하는 방식처럼 derivatives하는 것. \n",
+        "  - (다른 하나는 finite differencing 을 이용하는 것이다. )\n",
+        "  - 이부분이 SGD. 매우 느리다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MgD3bDOCX1Js",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Momentum"
+      ]
     },
     {
       "cell_type": "code",
